fix the ui and adding scrollbar lib

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -338,8 +338,6 @@ html {
 }
 /* Start To Do List */
 .to-do-list-wrapper {
-    max-height: 350px;
-    overflow: auto;
     padding: 20px 15px;
     background-color: #181818;
     border-radius: 10px;
